_EXTEND/initial/initial/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'continue'", "'break'", "'do'", 
                     "'to'", "'downto'", "'int'", "'float'", "'void'", "'boolean'", 
                     "'string'", "'class'", "'extends'", "'static'", "'final'", 
                     "'new'", "'this'", "'nil'", "'if'", "'then'", "'else'", 
                     "'for'", "<INVALID>", "';'", "':'", "'.'", "','", "'['", 
                     "']'", "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'*'", 
                     "'\\'", "'!='", "'='", "'<'", "'<='", "'||'", "'!'", 
                     "'-'", "'/'", "'%'", "'=='", "'>'", "'>='", "'&&'", 
                     "'^'", "':='" ]

    symbolicNames = [ "<INVALID>", "RETURN", "CONTINUE", "BREAK", "DO", 
                      "TO", "DOWNTO", "INTTYPE", "FLOATTYPE", "VOIDTYPE", 
                      "BOOLTYPE", "STRINGTYPE", "CLASS", "EXTENDS", "STATIC", 
                      "FINAL", "NEW", "THIS", "NIL", "IF", "THEN", "ELSE", 
                      "FOR", "BOOLLIT", "SEMI", "COLON", "DOT", "COMMA", 
                      "LSB", "RSB", "LB", "RB", "LP", "RP", "COMPAREOP", 
                      "EQOP", "LOGICOP", "AMOP", "MDOP", "ADDOP", "MULOP", 
                      "DIVOP", "NOTEQOP", "INITOP", "LESSTHANOP", "LESSTHANEQOP", 
                      "OROP", "NOTOP", "MINUSOP", "FLOATDIVOP", "MODULUSOP", 
                      "EQUALOP", "GREATERTHANOP", "GREATERTHANOPEQ", "ANDOP", 
                      "CONCATOP", "ASSIGNOP", "ID", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", 
                      "COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_memberlist = 2
    RULE_member = 3
    RULE_attribute = 4
    RULE_mutableattribute = 5
    RULE_immutableattribute = 6
    RULE_attributes = 7
    RULE_method = 8
    RULE_paramlist = 9
    RULE_params = 10
    RULE_param = 11
    RULE_ids = 12
    RULE_typedecl = 13
    RULE_primitype = 14
    RULE_arraytype = 15
    RULE_classtype = 16
    RULE_exp = 17
    RULE_exp1 = 18
    RULE_exp2 = 19
    RULE_exp3 = 20
    RULE_exp4 = 21
    RULE_exp5 = 22
    RULE_exp6 = 23
    RULE_exp7 = 24
    RULE_exp8 = 25
    RULE_exp9 = 26
    RULE_exp10 = 27
    RULE_explist = 28
    RULE_exps = 29
    RULE_operands = 30
    RULE_blockstatement = 31
    RULE_vardecllist = 32
    RULE_vardecl = 33
    RULE_mutablevar = 34
    RULE_immutablevar = 35
    RULE_variables = 36
    RULE_statementlist = 37
    RULE_statement = 38
    RULE_assignstatement = 39
    RULE_mutableattr = 40
    RULE_localvar = 41
    RULE_eleofarray = 42
    RULE_ifstatement = 43
    RULE_forstatement = 44
    RULE_breakstatement = 45
    RULE_continuestatement = 46
    RULE_returnstatement = 47
    RULE_methodinvostatement = 48
    RULE_arraylit = 49
    RULE_arraylitlist = 50
    RULE_arrayintlit = 51
    RULE_arrayfloatlit = 52
    RULE_arraystringlit = 53
    RULE_arrayboolit = 54

    ruleNames =  [ "program", "classdecl", "memberlist", "member", "attribute", 
                   "mutableattribute", "immutableattribute", "attributes", 
                   "method", "paramlist", "params", "param", "ids", "typedecl", 
                   "primitype", "arraytype", "classtype", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
                   "exp9", "exp10", "explist", "exps", "operands", "blockstatement", 
                   "vardecllist", "vardecl", "mutablevar", "immutablevar", 
                   "variables", "statementlist", "statement", "assignstatement", 
                   "mutableattr", "localvar", "eleofarray", "ifstatement", 
                   "forstatement", "breakstatement", "continuestatement", 
                   "returnstatement", "methodinvostatement", "arraylit", 
                   "arraylitlist", "arrayintlit", "arrayfloatlit", "arraystringlit", 
                   "arrayboolit" ]

    EOF = Token.EOF
    RETURN=1
    CONTINUE=2
    BREAK=3
    DO=4
    TO=5
    DOWNTO=6
    INTTYPE=7
    FLOATTYPE=8
    VOIDTYPE=9
    BOOLTYPE=10
    STRINGTYPE=11
    CLASS=12
    EXTENDS=13
    STATIC=14
    FINAL=15
    NEW=16
    THIS=17
    NIL=18
    IF=19
    THEN=20
    ELSE=21
    FOR=22
    BOOLLIT=23
    SEMI=24
    COLON=25
    DOT=26
    COMMA=27
    LSB=28
    RSB=29
    LB=30
    RB=31
    LP=32
    RP=33
    COMPAREOP=34
    EQOP=35
    LOGICOP=36
    AMOP=37
    MDOP=38
    ADDOP=39
    MULOP=40
    DIVOP=41
    NOTEQOP=42
    INITOP=43
    LESSTHANOP=44
    LESSTHANEQOP=45
    OROP=46
    NOTOP=47
    MINUSOP=48
    FLOATDIVOP=49
    MODULUSOP=50
    EQUALOP=51
    GREATERTHANOP=52
    GREATERTHANOPEQ=53
    ANDOP=54
    CONCATOP=55
    ASSIGNOP=56
    ID=57
    INTLIT=58
    FLOATLIT=59
    STRINGLIT=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    WS=63
    COMMENT=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.classdecl()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 115
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(BKOOLParser.CLASS)
                self.state = 118
                self.match(BKOOLParser.ID)
                self.state = 119
                self.match(BKOOLParser.LP)
                self.state = 120
                self.memberlist()
                self.state = 121
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(BKOOLParser.CLASS)
                self.state = 124
                self.match(BKOOLParser.ID)
                self.state = 125
                self.match(BKOOLParser.EXTENDS)
                self.state = 126
                self.match(BKOOLParser.ID)
                self.state = 127
                self.match(BKOOLParser.LP)
                self.state = 128
                self.memberlist()
                self.state = 129
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlist" ):
                return visitor.visitMemberlist(self)
            else:
                return visitor.visitChildren(self)




    def memberlist(self):

        localctx = BKOOLParser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberlist)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.STATIC, BKOOLParser.FINAL, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.member()
                self.state = 134
                self.memberlist()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(BKOOLParser.MethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutableattribute(self):
            return self.getTypedRuleContext(BKOOLParser.MutableattributeContext,0)


        def immutableattribute(self):
            return self.getTypedRuleContext(BKOOLParser.ImmutableattributeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = BKOOLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.mutableattribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.immutableattribute()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableattributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def attributes(self):
            return self.getTypedRuleContext(BKOOLParser.AttributesContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutableattribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutableattribute" ):
                return visitor.visitMutableattribute(self)
            else:
                return visitor.visitChildren(self)




    def mutableattribute(self):

        localctx = BKOOLParser.MutableattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mutableattribute)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(BKOOLParser.STATIC)
                self.state = 148
                self.typedecl()
                self.state = 149
                self.attributes()
                self.state = 150
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.typedecl()
                self.state = 153
                self.attributes()
                self.state = 154
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableattributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def attributes(self):
            return self.getTypedRuleContext(BKOOLParser.AttributesContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutableattribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutableattribute" ):
                return visitor.visitImmutableattribute(self)
            else:
                return visitor.visitChildren(self)




    def immutableattribute(self):

        localctx = BKOOLParser.ImmutableattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_immutableattribute)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(BKOOLParser.FINAL)
                self.state = 159
                self.match(BKOOLParser.STATIC)
                self.state = 160
                self.typedecl()
                self.state = 161
                self.attributes()
                self.state = 162
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(BKOOLParser.STATIC)
                self.state = 165
                self.match(BKOOLParser.FINAL)
                self.state = 166
                self.typedecl()
                self.state = 167
                self.attributes()
                self.state = 168
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.match(BKOOLParser.FINAL)
                self.state = 171
                self.typedecl()
                self.state = 172
                self.attributes()
                self.state = 173
                self.match(BKOOLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def INITOP(self):
            return self.getToken(BKOOLParser.INITOP, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def attributes(self):
            return self.getTypedRuleContext(BKOOLParser.AttributesContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attributes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributes" ):
                return visitor.visitAttributes(self)
            else:
                return visitor.visitChildren(self)




    def attributes(self):

        localctx = BKOOLParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributes)
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(BKOOLParser.ID)
                self.state = 178
                self.match(BKOOLParser.INITOP)
                self.state = 179
                self.exp()
                self.state = 180
                self.match(BKOOLParser.COMMA)
                self.state = 181
                self.attributes()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.match(BKOOLParser.ID)
                self.state = 184
                self.match(BKOOLParser.COMMA)
                self.state = 185
                self.attributes()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.match(BKOOLParser.ID)
                self.state = 187
                self.match(BKOOLParser.INITOP)
                self.state = 188
                self.exp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 189
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlistContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockstatement(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstatementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = BKOOLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method)
        try:
            self.state = 213
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.match(BKOOLParser.STATIC)
                self.state = 193
                self.typedecl()
                self.state = 194
                self.match(BKOOLParser.ID)
                self.state = 195
                self.match(BKOOLParser.LB)
                self.state = 196
                self.paramlist()
                self.state = 197
                self.match(BKOOLParser.RB)
                self.state = 198
                self.blockstatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.typedecl()
                self.state = 201
                self.match(BKOOLParser.ID)
                self.state = 202
                self.match(BKOOLParser.LB)
                self.state = 203
                self.paramlist()
                self.state = 204
                self.match(BKOOLParser.RB)
                self.state = 205
                self.blockstatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 207
                self.match(BKOOLParser.ID)
                self.state = 208
                self.match(BKOOLParser.LB)
                self.state = 209
                self.paramlist()
                self.state = 210
                self.match(BKOOLParser.RB)
                self.state = 211
                self.blockstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(BKOOLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = BKOOLParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        try:
            self.state = 217
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 215
                self.params()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def params(self):
            return self.getTypedRuleContext(BKOOLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_params
